--- a/demoapp/html/demo.css
+++ b/demoapp/html/demo.css
@@ -1,8 +1,56 @@
 body {
     font-family: sans-serif;
-    color: black;
-    background: #DDDDDD;
+    color: rgb(150, 81, 81);
+    background-image: url('./images/waterfall.jpg');
+    
 }
+
+/* #username_field{
+    border: 2px rgb(150, 31, 219) solid
+} */
+#username_field:focus{
+    outline: none;
+    border-color: red;
+
+}
+/* #username_field:hover{
+    border-color:red
+    
+} */
+/* #password_field{
+    border: 2px rgb(100, 219, 31) solid
+} */
+#password_field:focus {
+    outline: none;
+    border-color:red
+}
+
+
+#login_button {
+    background-color:rgb(247, 191, 228);
+    color:rgb(29, 57, 218)
+
+}
+
+#login_button:hover{
+    background-color: rgb(156, 224, 213);
+    cursor:pointer
+
+}
+
+.btn{
+    border: none;
+    text-decoration: none;
+    background:rgb(113, 184, 157);
+    padding: 8px;
+    color: rgb(14, 13, 13);
+    border-radius: 5px;
+    cursor:pointer;
+}
+.btn:hover{
+    background-color:palevioletred;
+}
+
 #container {
     margin: 20px auto;
     background: rgb(174, 211, 241);
@@ -34,7 +82,19 @@ body {
     height: 110px;
     border-radius: 50%;
     float: right;
-    display: block;
+    display: inline;
+}
+.fa-address-book{
+    display:inline;
+    float: left;
+}
+.fa-envelope {
+    display: inline;
+    float: left;
+}
+.fa-phone {
+    display: inline;
+    float: left;
 }
 
 header{
@@ -42,7 +102,7 @@ header{
     justify-content: space-between;
     align-items: center;
     padding: 10px ;
-    background-color: rgb(13, 13, 14);
+    background-color: rgb(8, 8, 8);
 }
 
 .logo{
